Alignment is not correct "Agree & Sign" below pop up and "Agree & Sign" button on "Signing" page

--- a/assets/css/rtl.css
+++ b/assets/css/rtl.css
@@ -1365,3 +1365,6 @@ table.responsive-table
 .history {
     padding-top: 8%;
 }
+.esig-template-page #esig-footer .sig-tooltip.active{
+    max-height: 250px !important;
+}
